deleted permissions in manifest and made changes in content js to adapt to these changes in manifest

--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,7 @@
     },
     "action": {
     },
-    "permissions": [
-        "tabs"
-      ],
+    "permissions": [],
     "host_permissions": [
         "https://twitch.tv/*",
         "https://www.twitch.tv/*"
